# ESP_with_RTOS

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: main.c.163AAEC12DA99DFA.idx  main_GPIO_inter.c.50323053BC998496.idx  main_rtos_LEDs.c.E1EEC57B0DC9961F.idx  main_rtos_tasks.c.90748F5EF2838D23.idx
main/: CMakeLists.txt  main_GPIO.c  main_GPIO_inter.c  main_rtos_LEDs.c  main_rtos_tasks.c
